@@ -505,6 +505,19 @@ under the License.
               <showWarnings>true</showWarnings>
             </configuration>
           </plugin>
+	  <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-surefire-plugin</artifactId>
+	    <version>2.6</version>
+	    <configuration>
+	      <systemProperties>
+		<property>
+		  <name>prop.jarLocation</name>
+		  <value>target/munged/giraph-${project.version}-jar-with-dependencies.jar</value>
+		</property>
+	      </systemProperties>
+	    </configuration>
+	  </plugin>
         </plugins>
       </build>
     </profile>
