@@ -151,7 +151,7 @@ public class GiraphRunner implements Tool {
     }
 
     if (cmd.hasOption("ca")) {
-      Configuration conf = job.getConfiguration();
+      Configuration jobConf = job.getConfiguration();
       for (String paramValue :
           Splitter.on(',').split(cmd.getOptionValue("ca"))) {
         String[] parts = Iterables.toArray(Splitter.on('=').split(paramValue),
@@ -164,7 +164,7 @@ public class GiraphRunner implements Tool {
           LOG.info("Setting custom argument [" + parts[0] + "] to [" +
               parts[1] + "]");
         }
-        conf.set(parts[0], parts[1]);
+        jobConf.set(parts[0], parts[1]);
       }
     }
 
