@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-167: mvn -Phadoop_non_secure clean verify fails (ekoontz via
+  aching).
+
   GIRAPH-163: bin/giraph script overwrites CLASSPATH if "dev
   environment" detected (this also removes USER_JAR from CLASSPATH)
   (metaman via aching).
